<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_dialog" android:padding="@dimen/margin_l" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/text_primary" android:gravity="center" android:id="@id/tv_title_dialog_no_wifi_connection" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialogo_sin_wifi_titulo" />
        <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_secundary" android:gravity="center" android:id="@id/tv_description_dialog_no_wifi_connection" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l" android:layout_marginBottom="@dimen/margin_l" android:text="@string/dialogo_sin_wifi_mensaje" android:layout_marginVertical="@dimen/margin_l" />
        <CheckBox android:textSize="@dimen/text_size_s" android:textColor="@color/text_primary" android:textColorLink="@color/main_blue" android:layout_gravity="center_vertical" android:id="@id/cb_dont_show_again_no_wifi" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l" android:text="@string/dont_show_again" android:paddingStart="@dimen/margin_s" android:paddingEnd="14.0dip" android:buttonTint="@color/main_blue" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/tv_settings_dialog_no_wifi_connection" android:background="@drawable/ripple_light_grey" android:text="@string/settings" android:layout_marginEnd="@dimen/margin_l" style="@style/DialogButtonsStyle" />
            <TextView android:textColor="@color/blue_primary" android:id="@id/tv_cancel_dialog_no_wifi_connection" android:background="@drawable/ripple_open_button" android:layout_width="80.0dip" android:text="@string/option_button_cancel" android:layout_marginEnd="@dimen/margin_m" android:layout_toStartOf="@id/tv_ok_dialog_no_wifi_connection" style="@style/DialogButtonsStyle" />
            <TextView android:id="@id/tv_ok_dialog_no_wifi_connection" android:layout_width="80.0dip" android:text="@string/ok" android:layout_alignParentEnd="true" style="@style/DialogButtonsStyle" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>