<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/bg_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/text_primary" android:id="@id/tv_title_dialog_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/output_path" />
        <RelativeLayout android:id="@id/rl_path_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_m">
            <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="start" android:id="@id/tv_path_dialog_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/margin_m" android:layout_toStartOf="@id/iv_browse_path" />
            <TextView android:textSize="@dimen/text_size_s" android:textColor="@color/text_secundary" android:id="@id/tv_error_path" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-4.0dip" android:text="@string/core_msg_cannot_write_path" android:layout_below="@id/tv_path_dialog_path" />
            <ImageView android:id="@id/iv_browse_path" android:background="@drawable/ripple_bg" android:layout_width="24.0dip" android:layout_height="24.0dip" android:contentDescription="@string/core_browse_storage" android:layout_alignParentEnd="true" app:srcCompat="@drawable/core_vector_folder_edit" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_secundary" android:id="@id/tv_name_format_dialog_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/backup_file_name_format" />
        <RadioGroup android:id="@id/rg_name_format" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s">
            <RadioButton android:textSize="@dimen/text_size_m" android:textColor="@color/third_grey" android:id="@id/rb_option_appname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/dialog_path_app_name" android:buttonTint="@color/blue_primary" />
            <RadioButton android:textSize="@dimen/text_size_m" android:textColor="@color/third_grey" android:id="@id/rb_option_packagename" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_path_packagename" android:buttonTint="@color/blue_primary" />
        </RadioGroup>
        <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_secundary" android:id="@id/tv_extension_dialog_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/backup_file_extension" />
        <RadioGroup android:orientation="horizontal" android:id="@id/rg_extension" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s">
            <RadioButton android:textSize="@dimen/text_size_m" android:textColor="@color/third_grey" android:id="@id/rb_xapk_extension" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:buttonTint="@color/blue_primary" />
            <RadioButton android:textSize="@dimen/text_size_m" android:textColor="@color/third_grey" android:id="@id/rb_apks_extension" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/margin_l" android:buttonTint="@color/blue_primary" />
        </RadioGroup>
        <CheckBox android:textSize="12.0sp" android:textColor="@color/third_grey" android:id="@id/cb_versioncode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_m" android:text="@string/dialog_path_version_code" android:buttonTint="@color/blue_primary" />
        <CheckBox android:textSize="@dimen/text_size_m" android:textColor="@color/third_grey" android:id="@id/cb_versionname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/version_label" android:buttonTint="@color/blue_primary" />
        <RelativeLayout android:background="@drawable/shape_bg_light_grey" android:paddingLeft="@dimen/margin_l" android:paddingTop="@dimen/margin_m" android:paddingRight="@dimen/margin_l" android:paddingBottom="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_m" android:paddingHorizontal="@dimen/margin_l" android:paddingVertical="@dimen/margin_m">
            <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_secundary" android:id="@id/tv_result_title_dialog_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_path_example" />
            <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:id="@id/tv_result_dialog_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:layout_below="@id/tv_result_title_dialog_path" />
        </RelativeLayout>
        <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_l">
            <TextView android:textColor="@color/blue_primary" android:layout_gravity="center_horizontal" android:id="@id/tv_cancel_dialog_path" android:background="@drawable/ripple_button_main_blue_stroke" android:text="@string/option_button_cancel" style="@style/DialogButtonsStyle" />
            <TextView android:layout_gravity="center_horizontal" android:id="@id/tv_ok_dialog_path" android:text="@string/ok" android:layout_marginStart="@dimen/margin_m" style="@style/DialogButtonsStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>