<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingBottom="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:background="@drawable/bg_dialog" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_m" android:layout_marginTop="-70.0dip" android:layout_marginRight="@dimen/margin_m" android:layout_below="@id/rl_header" android:layout_marginHorizontal="@dimen/margin_m">
        <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="60.0dip">
            <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/margin_m" android:paddingRight="@dimen/margin_m" android:paddingBottom="@dimen/margin_l" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:paddingHorizontal="@dimen/margin_m">
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/main_blue" android:ellipsize="end" android:id="@id/tv_title_app_general_management" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/general_title" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_open" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/open" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_update" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/action_update" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_old_versions" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialogo_app_old_versions" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_app_installed_details" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_instaled_details" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_see_on_uptodown" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_catalog_details" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_uninstall" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialogo_app_selected_uninstall" android:maxLines="1" />
                <View android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/margin_m" android:layout_marginTop="@dimen/margin_s" android:layout_marginRight="@dimen/margin_m" android:layout_marginBottom="@dimen/margin_s" android:layout_marginHorizontal="@dimen/margin_m" android:layout_marginVertical="@dimen/margin_s" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/main_blue" android:ellipsize="end" android:id="@id/tv_title_update_config" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_title" android:maxLines="1" />
                <RelativeLayout android:id="@id/rl_exclude" android:background="@drawable/core_ripple_bg_card" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_exclude" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_auto_update_title" android:maxLines="1" />
                    <androidx.appcompat.widget.SwitchCompat android:id="@id/sc_exclude" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:thumb="@drawable/selector_slide_thumb_switch" android:layout_centerVertical="true" android:scaleX="0.7" android:scaleY="0.7" android:layout_alignParentEnd="true" app:track="@drawable/selector_slide_track_switch" />
                </RelativeLayout>
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_check_updates" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/check_for_update" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_version_details" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_details" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_version_changelog_details" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_detail_whats_new" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_ignore_version" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/skip_update" android:maxLines="1" />
                <View android:id="@id/v_updates_divider" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/margin_m" android:layout_marginTop="@dimen/margin_s" android:layout_marginRight="@dimen/margin_m" android:layout_marginBottom="@dimen/margin_s" android:layout_marginHorizontal="@dimen/margin_m" android:layout_marginVertical="@dimen/margin_s" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/main_blue" android:ellipsize="end" android:id="@id/tv_title_security" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/menu_left_security_label" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_backup" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backup" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_virustotal_report" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/virustotal_safety_report_title" android:maxLines="1" />
                <View android:id="@id/v_security_divider" android:background="@color/divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/margin_m" android:layout_marginTop="@dimen/margin_s" android:layout_marginRight="@dimen/margin_m" android:layout_marginBottom="@dimen/margin_s" android:layout_marginHorizontal="@dimen/margin_m" android:layout_marginVertical="@dimen/margin_s" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/main_blue" android:ellipsize="end" android:id="@id/tv_title_info_and_share" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sharing_title" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_share" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_this_app" android:maxLines="1" />
                <TextView android:textSize="@dimen/text_size_m" android:textColor="@color/text_primary" android:ellipsize="end" android:id="@id/tv_nsd_send" android:background="@drawable/core_ripple_bg_card" android:padding="@dimen/margin_m" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/nsd_send_via_wifi" android:maxLines="1" />
            </LinearLayout>
        </ScrollView>
        <View android:background="@drawable/shape_shadow_myappsupdates_dialog" android:layout_width="fill_parent" android:layout_height="20.0dip" android:layout_marginTop="60.0dip" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center_horizontal" android:id="@id/rl_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true">
        <View android:id="@id/v_outside_header" android:layout_width="fill_parent" android:layout_height="30.0dip" />
        <ImageView android:id="@id/iv_icon" android:layout_width="@dimen/icon_size_l" android:layout_height="@dimen/icon_size_l" android:adjustViewBounds="true" android:layout_centerHorizontal="true" android:contentDescription="@null" app:srcCompat="@drawable/vector_uptodown_logo_disabled" />
        <TextView android:textSize="@dimen/text_size_l" android:textColor="@color/text_primary" android:id="@id/tv_app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_m" android:layout_marginBottom="@dimen/margin_m" android:text="@string/app_name" android:layout_below="@id/iv_icon" android:layout_centerHorizontal="true" android:layout_marginVertical="@dimen/margin_m" />
    </RelativeLayout>
</RelativeLayout>